updated info page

--- a/ResponsiveWebDesign/ElonMuskInfoPage.html
+++ b/ResponsiveWebDesign/ElonMuskInfoPage.html
@@ -2,9 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Elon Musk Info Page</title>
+    <link rel="stylesheet" href="ElonMuskInfoPage.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet" type="text/css">
 </head>
 <body>
-$END$
+
+
+<main id="main">
+    <div id="title">
+        <title>Elon Musk</title>
+        <h1>Elon Musk</h1>
+        <p> Entrepeneur, Visionary and Self-Made Billionaire</p>
+    </div>
+
+    <figure id="img-div">
+        <img src="https://image.cnbcfm.com/api/v1/image/106434195-1595357993564-elon.jpg?v=1611781369" id="image" alt="portrait of Elon Musk in a suit" class="responsive-image">
+        <figcaption id="img-caption" >Elon Musk, Ceo of Tesla</figcaption>
+    </figure>
+
+    <div id="tribute-info">
+        <h3 id="headline" align="center">Timeline of Elon Musk</h3>
+        <ul>
+            <li><strong>1971</strong> Born in Pretoria, South Africa</li>
+            <li><strong>1981</strong> Developed in interest in computing and tought himself computer programming</li>
+            <li><strong>1983</strong> Sold his first video game for approximately 500$</li>
+            <li><strong>1989</strong> Moved to Canada to attend Queen's University</li>
+            <li><strong>1992</strong> Went to University of Pennsylvania tp Study Business and Physics</li>
+            <li><strong>1995</strong> Started Zip2, a Web Software Company</li>
+            <li><strong>1999</strong> Cofounded X.com, a financial service and payment company</li>
+            <li><strong>2000</strong> X.com merged with Confinity to form Paypal and he became CEO but later got fired due to disagreements with other company leaderships</li>
+            <li><strong>2001</strong> Interest in Space Exploration, later that year he went to Moscow to buy ICBMs to send payloads to Mars</li>
+            <li><strong>2002</strong> Founded SpaceX, a space exploration company with a focus on advancing the state of rocket technology</li>
+            <li><strong>2004</strong> Joined Tesla and led the series A round of investment as well as joined Tesla's board of directors as its chairman</li>
+            <li><strong>2006</strong> Cofounded SolarCity and SpaceX received success by getting contracs from NASA to transport cargo and astronouts to the international space station</li>
+            <li><strong>2007</strong> Became CEO of Tesla</li>
+            <li><strong>2011</strong> Expressed his hope to send humans to Mars within 10 to 20 years</li>
+            <li><strong>2012</strong> Announces collaboration of SolarCity and Tesla to use electric vehicle batteries</li>
+            <li><strong>2015</strong> Announced creation of OpenAi, an Artificial Intelligence company with the aim of developing artificial general intellegence in a way that is safe and beneficial to humanity</li>
+        </ul>
+
+        <div id="tribute-quote">
+            <q>I think the most important thing is to create a self-sustaining city on Mars. That's, I think, the critical thing for maximizing the life of humanity; how long will our civilization last.</q></br>
+            <p id="elon-musk-quote">Elon Musk on Mars</p>
+        </div>
+
+        <div id="link-div">
+            <h3>For more information on Elon Musk, visit his
+                <a id="tribute-link"  target="_blank" href="https://de.wikipedia.org/wiki/Elon_Musk">Wikipedia Entry</a>.
+            </h3>
+        </div>
+    </div>
+</main>
 </body>
 </html>
