--- a/ResponsiveWebDesign/GamingSurvey.html
+++ b/ResponsiveWebDesign/GamingSurvey.html
@@ -2,9 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Gaming Survey</title>
+    <link rel="stylesheet" href="GamingSurvey.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet" type="text/css">
 </head>
 <body>
-$END$
+    <main id="main">
+        <div>
+            <h1 id="title">Gaming Survey</h1>
+            <p id="description">Thank you for taking part in this survey.</p><hr>
+        </div>
+
+        <div>
+            <form id="survey-form">
+                <label id="name-label" for="name">Name</label>
+                <input id="name" name="name" type="text" placeholder="Enter your Name" required>
+
+                <label id="email-label" for="email">Email</label>
+                <input id="email" name="email" type="email" placeholder="Enter your Email" required>
+
+                <label id="number-label" for="number">Age</label>
+                <input id="number" name="age" type="number" placeholder="Age" min="13" max="99">
+
+                <p>Which option best describes your current role?</p>
+                <label for="dropdown"></label>
+                <select id="dropdown" name="role" required>
+                    <option value="placeholder" disabled selected>Select current role</option>
+                    <option value="student">Student</option>
+                    <option value="full-time-job">Full Time Job</option>
+                    <option value="part-time-job">Part Time Job</option>
+                    <option value="unknown">Prefer not to say</option>
+                    <option value="other">Other</option>
+                </select>
+
+                <p>How often do you play video games?<p>
+                <label><input type="radio" name="playtime" value="daily">Daily</label>
+                <label><input type="radio" name="playtime" value="weekly">Several times a week</label>
+                <label><input type="radio" name="playtime" value="monthly">Several times a month</label>
+                <label><input type="radio" name="playtime" value="yearly">Several times a year</label>
+                <label><input type="radio" name="playtime" value="never">I don't play video games</label>
+
+                <p>What type of games do you play? (Check all that apply)</p>
+                <label><input type="checkbox" name="genre" value="adventure">Adventure</label>
+                <label><input type="checkbox" name="genre" value="action">Action</label>
+                <label><input type="checkbox" name="genre" value="arcade">Arcade</label>
+                <label><input type="checkbox" name="genre" value="mmorpg">MMORPG</label>
+                <label><input type="checkbox" name="genre" value="moba">MOBA</label>
+                <label><input type="checkbox" name="genre" value="simulator">Simulator</label>
+                <label><input type="checkbox" name="genre" value="sports">Sports</label>
+                <label><input type="checkbox" name="genre" value="strategy">Strategy</label>
+
+                <p>Which do you prefer to play games on?<p>
+                <label><input type="radio" name="console" value="pc">PC</label>
+                <label><input type="radio" name="console" value="playstation">PlayStation</label>
+                <label><input type="radio" name="console" value="xbox">Xbox</label>
+                <label><input type="radio" name="console" value="nintendo-switch">Nintendo Switch</label>
+                <label><input type="radio" name="console" value="other">Other</label>
+
+                <p>Any comments or suggestions?</p>
+                <label for="comments"></label>
+                <textarea id="comments" placeholder="Enter your comment here..."></textarea>
+
+                <label for="submit"></label>
+                <button id="submit" type="submit">Submit</button>
+
+            </form>
+        </div>
+    </main>
+
 </body>
 </html>
